2000-03-07  Jason Merrill  <jason@casey.cygnus.com>

	* search.c (note_debug_info_needed): Walk the bases even if we 
	weren't deferring the type itself.

2000-03-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* decl2.c (finish_objects): Constify a char*.

	* method.c (emit_thunk): Likewise.

2000-03-06  Nathan Sidwell  <nathan@codesourcery.com>

	* typeck.c (dubious_conversion_warnings): Look through
	REFERENCE_TYPE.

Mon Mar  6 08:46:47 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* class.c (dfs_modify_vtables): I is now unsigned.
	(check_bitfield_decl): Use tree_int_cst_sgn and compare_tree_int.
	(build_base_field): Add casts of TREE_INT_CST_LOW to HOST_WIDE_INT.
	* error.c (dump_expr): Cast TREE_INT_CST_HIGH to unsigned.
	* init.c (build_vec_init): Cast TREE_INT_CST_LOW to HOST_WIDE_INT.
	* method.c (build_overload_int): Cast TREE_INT_CST_HIGH to unsigned.
	* typeck.c (build_binary_op, case TRUNC_DIV_EXPR):
	Call integer_all_onesp.
	* typeck2.c (process_init_constructor): Use compare_tree_int.

	* lang-specs.h (as): Don't call if -syntax-only.

2000-03-06  Mark Mitchell  <mark@codesourcery.com>

	* expr.c (cplus_expand_expr, case STMT_EXPR): Don't set
	RTL_EXPR_HAS_NO_SCOPE after all.

2000-03-05  Mark Mitchell  <mark@codesourcery.com>

	* expr.c (cplus_expand_expr, case STMT_EXPR): Use
	expand_start_stmt_expr and expand_end_stmt_expr directly.  Set
	RTL_EXPR_HAS_NO_SCOPE.

	* pt.c (instantiate_decl): Clear TI_PENDING_TEMPLATE_FLAG a little
	later.
	
	* dump.c (dequeue_and_dump): Dump SCOPE_NO_CLEANUPS_P.

2000-03-05  Nathan Sidwell  <nathan@codesourcery.com>

	* call.c (convert_like): Macrofy.
	(convert_like_with_context): New macro.
	(convert_like_real): Renamed from convert_like.  Add calling
	context parameters, for diagnostics. Add recursive flag.  Call 
	dubious_conversion_warnings for outer conversion.
	(build_user_type_conversion): Use convert_like_with_context.
	(build_over_call): Likewise. Don't warn about dubious